[gd_scene load_steps=4 format=3 uid="uid://cjq7xqc1v6ssl"]

[ext_resource type="Script" uid="uid://celj18ncsy7iu" path="res://Components/DialogComponent/DialogPlayer.gd" id="1_33pgl"]
[ext_resource type="Texture2D" uid="uid://d2mgnyyuxn7tr" path="res://UI/download.png" id="1_o35c7"]

[sub_resource type="LabelSettings" id="LabelSettings_jxsxs"]
font_size = 128
font_color = Color(0, 0, 0, 1)

[node name="DialogPlayer" type="Control"]
process_mode = 3
layout_mode = 3
anchor_left = -0.64
anchor_top = 0.5
anchor_right = 0.874
anchor_bottom = 0.935
offset_left = 1233.8
offset_top = -539.0
offset_right = -1673.08
offset_bottom = -1008.8
size_flags_vertical = 8
script = ExtResource("1_33pgl")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 491.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(6, 6)
texture = ExtResource("1_o35c7")
expand_mode = 1

[node name="TextLabel" type="Label" parent="."]
offset_left = 629.0
offset_top = 170.0
offset_right = 2776.0
offset_bottom = 607.0
label_settings = SubResource("LabelSettings_jxsxs")
autowrap_mode = 3

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
